don't use cloudflare. use local files

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="text/javascript">
 if (!document.registerElement) {
-  document.writeln(decodeURI('%3Cscript%20src=%22https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.12/webcomponents.min.js%22%20type=%22text/javascript%22%3E%3C/script%3E'));
+  document.writeln(decodeURI('%3Cscript%20src=%22/js/webcomponents.min.js%22%20type=%22text/javascript%22%3E%3C/script%3E'));
 }
 </script>
 
