implemented pretty printing for log files

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="text/javascript">
 if (!document.registerElement) {
-  document.writeln(decodeURI('%3Cscript%20src=%22/js/webcomponents.min.js%22%20type=%22text/javascript%22%3E%3C/script%3E'));
+  document.writeln(decodeURI('%3Cscript%20src=%22js/webcomponents.min.js%22%20type=%22text/javascript%22%3E%3C/script%3E'));
 }
 </script>
 
@@ -27,6 +27,7 @@ if (!document.registerElement) {
 <script type="text/javascript" src="js/jquery.knob.min.js"></script>
 <script src="js/notify.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/keyboard.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/ansi_up-4.0.4/ansi_up.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 
 </body>
