send config object on websocket open

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="text/javascript">
 if (!document.registerElement) {
-  document.writeln(decodeURI('%3Cscript%20src=%22js/webcomponents.min.js%22%20type=%22text/javascript%22%3E%3C/script%3E'));
+  document.writeln(decodeURI('%3Cscript%20src=%22https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.12/webcomponents.min.js%22%20type=%22text/javascript%22%3E%3C/script%3E'));
 }
 </script>
 
@@ -13,8 +13,8 @@ if (!document.registerElement) {
 <link type="text/css" rel="stylesheet" href="css/goldenlayout-base.css" />
 <link type="text/css" rel="stylesheet" href="css/goldenlayout-dark-theme.css" />
 <link rel="stylesheet" type="text/css" href="css/main.css">
-
 <script src="js/reconnecting-websocket.min.js"></script>
+
 </head>
 <body>
 <script src="js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
