--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@ if (!document.registerElement) {
 }
 </script>
 
+<link rel="stylesheet" href="css/jquery-ui/jquery-ui.css">
 <link rel="stylesheet" href="js/codemirror/lib/codemirror.css">
 <link rel="stylesheet" href="js/codemirror/theme/midnight.css">
 <link rel="stylesheet" href="css/js-piano.css">
@@ -17,7 +18,11 @@ if (!document.registerElement) {
 
 </head>
 <body>
+<div id="confirmoverwrite" title="Replace editor content?">
+  <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>Do you really want to replace the editors content?</p>
+</div>
 <script src="js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/jquery-ui/jquery-ui.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="js/goldenlayout.min.js"></script>
 <script src="js/codemirror/lib/codemirror.js"></script>
 <script src="js/codemirror/mode/lua/lua.js"></script>
