prototype of an oscilloscope and spectrum analyzer

--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,9 @@ if (!document.registerElement) {
 <div id="confirmoverwrite" title="Replace editor content?">
   <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>Do you really want to replace the editors content?</p>
 </div>
+    <canvas id='scope' width=400 height=200></canvas>
+    <br>
+    <canvas id='spectrum' width=400 height=200>
 <script src="js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/jquery-ui/jquery-ui.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="js/goldenlayout.min.js"></script>
