connection lost dialog and concurrent modification dialog

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@ if (!document.registerElement) {
 <div id="askcontentdiffer" title="Server patch and local patch differ">
   <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>The patch stored in the server and your local patch stored in the browser diff.</p>
 </div>
-<div id="confirmconnectionlost" title="Connection to MidiPatch List">
+<div id="confirmconnectionlost" title="Connection to MidiPatch lost">
   <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>Connection to the MidiPatch server lost</p>
 </div>
 <div id="confirmconcurrentmod" title="More than one user connected">
