show connection status and reconnect automatically instead of showing a dialog

--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,7 @@ if (!document.registerElement) {
 <script src="js/jquery-ui/jquery-ui.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="js/goldenlayout.min.js"></script>
 <script src="js/codemirror/lib/codemirror.js"></script>
+<script src="js/reconnecting-websocket.min.js"></script>
 <script src="js/codemirror/mode/lua/lua.js"></script>
 <script src="js/codemirror/keymap/sublime.js"></script>
 <script src="js/codemirror/keymap/vim.js"></script>
