--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@ if (!document.registerElement) {
 </script>
 
 <link rel="stylesheet" href="css/jquery-ui/jquery-ui.css"/>
+<link rel="stylesheet" href="css/jquery.dataTables.min.css"/>
 <link rel="stylesheet" href="js/codemirror/lib/codemirror.css"/>
 <link rel="stylesheet" href="js/codemirror/theme/midnight.css"/>
 <link rel="stylesheet" href="css/js-piano.css"/>
@@ -29,10 +30,16 @@ if (!document.registerElement) {
 <div id="confirmconcurrentmod" title="More than one user connected">
   <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>Concurrent modification of MidiPatch not supported yet.</p>
 </div>
+<div id="savetolibrary" title="Save patch to library">
+  <label for="patchname">Name</label><br/><input id="patchname" type="text"></input><br/>
+  <label for="patchdescription">Description</label><br/>
+  <textarea id="patchdescription" rows="3" cols="35"></textarea>
+</div>
 
 <script src="js/AudioContextMonkeyPatch.js"></script>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/jquery-ui/jquery-ui.js"></script>
+<script src="js/jquery.dataTables.min.js"></script>
 <script src="js/goldenlayout.min.js"></script>
 <script src="js/codemirror/lib/codemirror.js"></script>
 <script src="js/reconnecting-websocket.min.js"></script>
