--- a/html/index.html
+++ b/html/index.html
@@ -10,15 +10,14 @@ if (!document.registerElement) {
 }
 </script>
 
+<link rel="stylesheet" href="css/datatables.css"/>
 <link rel="stylesheet" href="css/jquery-ui/jquery-ui.css"/>
 <link rel="stylesheet" href="js/codemirror/lib/codemirror.css"/>
 <link rel="stylesheet" href="js/codemirror/theme/midnight.css"/>
 <link rel="stylesheet" href="css/js-piano.css"/>
 <link rel="stylesheet" href="css/goldenlayout-base.css" />
 <link rel="stylesheet" href="css/goldenlayout-dark-theme.css" />
-<link rel="stylesheet" href="css/jquery.dataTables.min.css"/>
 <link rel="stylesheet" href="css/main.css"/>
-
 </head>
 <body>
 <div id="confirmoverwrite" title="Replace editor content?">
@@ -39,7 +38,7 @@ if (!document.registerElement) {
 <script src="js/AudioContextMonkeyPatch.js"></script>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/jquery-ui/jquery-ui.js"></script>
-<script src="js/jquery.dataTables.min.js"></script>
+<script src="js/datatables.js"></script>
 <script src="js/goldenlayout.min.js"></script>
 <script src="js/codemirror/lib/codemirror.js"></script>
 <script src="js/reconnecting-websocket.min.js"></script>
