--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@ if (!document.registerElement) {
 </script>
 
 <link rel="stylesheet" href="css/datatables.css"/>
-<link rel="stylesheet" href="css/jquery-ui/jquery-ui.css"/>
+<link rel="stylesheet" href="css/jquery-ui-1.12.1.custom/jquery-ui.css"/>
 <link rel="stylesheet" href="js/codemirror/lib/codemirror.css"/>
 <link rel="stylesheet" href="js/codemirror/theme/midnight.css"/>
 <link rel="stylesheet" href="css/js-piano.css"/>
