show a popup dialog for errors

--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,10 @@ if (!document.registerElement) {
 <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
+<div id="errordialog" title="">
+  <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span><span class="errormessage"></span></p>
+</div>
+
 <div id="confirmoverwrite" title="Replace editor content?">
   <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>Do you really want to replace the editors content?</p>
 </div>
