--- a/html/index.html
+++ b/html/index.html
@@ -35,6 +35,7 @@ if (!document.registerElement) {
 </div>
 <div id="exporttolibrary" title="Export session to library">
   <label class="ui-widget" for="sessionname">Name</label><br/><input id="sessionname" type="text"></input><br/>
+  <label class="ui-widget" for="sessionauthor">Author</label><br/>
   <label class="ui-widget" for="sessiondescription">Description</label><br/>
   <textarea class="ui-widget" id="sessiondescription" rows="3" cols="35"></textarea><br/>
   <input class="ui-widget" type="checkbox" id="exportcode" checked/><label for="exportcode">Export code</label><br/>
