modularized code for piano and analyser

--- a/html/index.html
+++ b/html/index.html
@@ -65,6 +65,9 @@ if (!document.registerElement) {
 <script src="js/jquery.knob.min.js"></script>
 <script src="js/notify.js"></script>
 <script src="js/keyboard.min.js"></script>
+
+<script src="js/components/analyser.js"></script>
+<script src="js/components/piano.js"></script>
 <script src="js/main.js"></script>
 
 </body>
