modularized log and toolbar

--- a/html/index.html
+++ b/html/index.html
@@ -66,6 +66,8 @@ if (!document.registerElement) {
 <script src="js/notify.js"></script>
 <script src="js/keyboard.min.js"></script>
 
+<script src="js/components/log.js"></script>
+<script src="js/components/toolbar.js"></script>
 <script src="js/components/analyser.js"></script>
 <script src="js/components/piano.js"></script>
 <script src="js/main.js"></script>
