Reset piano state on patch change or reload: #125

--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@ if (!document.registerElement) {
 <script src="js/codemirror/keymap/sublime.js"></script>
 <script src="js/codemirror/keymap/vim.js"></script>
 <script src="js/codemirror/keymap/emacs.js"></script>
-<script src="js/jquery.knob.min.js"></script>
+<script src="js/jQuery-Knob-1.2.13/js/jquery.knob.js"></script>
 <script src="js/notify.js"></script>
 <script src="js/keyboard.min.js"></script>
 
