use webview for presentation instead of a full browser

--- a/html/index.html
+++ b/html/index.html
@@ -4,11 +4,6 @@
 <title>MidiPatch</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script>
-if (!document.registerElement) {
-  document.writeln(decodeURI('%3Cscript%20src=%22https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.12/webcomponents.min.js%22%20type=%22text/javascript%22%3E%3C/script%3E'));
-}
-</script>
 
 <link rel="stylesheet" href="css/datatables.css"/>
 <link rel="stylesheet" href="css/jquery-ui-1.12.1.custom/jquery-ui.css"/>
@@ -45,6 +40,6 @@ if (!document.registerElement) {
 <script src="js/components/analyser.js"></script>
 <script src="js/components/piano.js"></script>
 <script src="js/main.js"></script>
-
+<!-- <script src="js/webcomponents.min.js"></script> -->
 </body>
 </html>
